Correctifs Linguistique (pictos + petits & dropbox wrap)

--- a/public/css/dragAndDrop.css
+++ b/public/css/dragAndDrop.css
@@ -8,13 +8,14 @@
 .droppable-elements{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 2rem
 }
 
 .draggable-elements img {
-    height: 7rem;
-    width: 7rem;
+    height: 6.5rem;
+    width: 6.5rem;
     margin-left : 10px;
     margin-right : 10px;
     margin-top : 10px;
@@ -35,11 +36,12 @@
 }
 
 .droppable {
-    height: 7.5rem;
-    width: 7.5rem;
+    height: 6.5rem;
+    width: 6.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2px 0px;
     border-top: 2px solid darkgrey;
     border-bottom: 2px solid darkgrey;
     border-right: 1px dashed darkgrey;
@@ -47,8 +49,8 @@
 }
 
 .droppable img {
-    width : 7.5rem; /* remplir le cadre du drop pour éviter plusieurs pictos dans une case */
-    height : 7.5rem;
+    width : 6.5rem; /* remplir le cadre du drop pour éviter plusieurs pictos dans une case */
+    height : 6.5rem;
     border: 2px black solid;
     border-radius: 5px;
 }
